Debug oam.image based on unit testing.

--- a/accesstools/oampython/README
+++ b/accesstools/oampython/README
@@ -1,1 +1,5 @@
-this code is all broken right now
+Prereqs include gdal and urlgrabber...
+
+Run `python oam/test/run.py` to watch the tests go.
+
+Run `python setup.py install` to do the good stuff.
